# evolution-of-todo

./: .env.example  .gitignore  PHASE-2-ROADMAP.md  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: README.md  deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  check_db.py  pyproject.toml  requirements.txt  test_db.py
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/models/: task.py  (+1 more)
deployment/digitalocean/: cluster-config.md
deployment/oci/: deploy.sh
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/types/: index.ts
history/adr/: 001-frontend-technology-stack.md  002-backend-technology-stack.md  003-authentication-architecture.md  004-data-validation-strategy.md  005-testing-architecture.md  006-mcp-server-architecture.md
mcp-server/: .env.example  Dockerfile  __init__.py  pyproject.toml  server.py
mcp-server/models/: task.py  user.py
mcp-server/tools/: add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
phase-01/: .gitignore  pyproject.toml
phase-01-console/: README.md  pyproject.toml
phase-01/src/: main.py
phase-01/src/cli/: menu.py
phase-01/src/services/: task_service.py
phase-01/tests/integration/: test_app_workflow.py
phase-01/tests/unit/: test_prompts.py  test_task_model.py
phase-02/frontend/: next.config.ts
phase-03/mcp-servers/: .dockerignore  Dockerfile  config.py  database.py  requirements.txt
(+165 files in other folders)
